# AL_Rover

./: Dockerfile  README.md
Motor_Go2_control/: CMakeLists.txt  Dockerfile  README.md  arms_control.cpp  audio_demo.cpp  block_comm_demo.cpp  control.cpp  control_mecanum.cpp  docker-compose.yml  identifica_u2d2.cpp  keyboard_control.cpp  listar_puertos.cpp  menu_motor_move.cpp  read_joystick.cpp  read_motors.cpp
Rover_urdf/: robot.urdf
Rover_urdf/assets/: aluminum_profile.part  aluminum_profile.stl  aluminum_profile_2.part  aluminum_profile_2.stl  arms.part  arms.stl  bearing_mini.part  bearing_mini.stl  chasis_union.part  chasis_union.stl  motor_case.part  motor_case.stl  motor_part.part  motor_part.stl  nm127al_2_1.part  nm127al_2_1.stl  shaft_wheel.part  shaft_wheel.stl  shoulder.part  shoulder.stl  shoulder__2.part  shoulder__2.stl  tool.part  tool.stl  tool_holder.part  tool_holder.stl
motor_controller/: CMakeLists.txt  package.xml
motor_controller/launch/: motor_launch.py
motor_controller/msg/: MotorCommand.msg  MotorState.msg
motor_controller/src/: motor.cpp  motor_node.cpp
omnidirectional_controller/: all_motors.py  read.py  write.py
